--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 				<div class="container">
 
 					<div class="navbar-header">
-						<a href="index.html" class="navbar-brand">Espy-QA</a>
+						<!-- <a href="index.html" class="navbar-brand">Espy-QA</a> -->
+						<a href="index.html" class="pull-left"><img src="D:\ESPY\images\logo\logo3.png"></a> 
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#ftheme">
 							<span class="sr-only">Toggle</span>
 							<span class="icon-bar"></span>
